ajout d'adresse mail sur la premiere page

--- a/Les_transparent/Python01.tex
+++ b/Les_transparent/Python01.tex
@@ -3,7 +3,7 @@
 \documentclass{transp_java}
 \usepackage{listings}
 \title[Langage et algorithmique : Python 3]{Langage et algorithmique}
-\author{A. Malek TOUMI}
+\author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[DLT 2003]{Developments in Language Theory Conference, 2003}
 \date{}
 \institute{ENSTA Bretagne}
