--- a/Les_transparent/corps/syntaxe.tex
+++ b/Les_transparent/corps/syntaxe.tex
@@ -242,8 +242,8 @@
 \begin{remarque}
 \begin{itemize}
 	\item Les types \emph{int}, \emph{float}, \emph{bool}, \emph{complex}  sont les 4 types simples de base (built-in) en Python. 
-	\item Les types simples (sclaires, atomiques) permette de stocker une seule donnée par variable, contrairement aux types composites (containers) comme les séquences et les ensembles,
-	\item Les types simples sont immutables (non modifiable)
+	\item Les types simples (scalaires, atomiques) permettent de stocker une seule donnée par variable, contrairement aux types composites (containers) comme les séquences et les ensembles,
+	\item Les types simples sont immutables (non modifiables)
 	\end{itemize}
 \end{remarque}
 \end{frame}
@@ -298,12 +298,12 @@ Indexation des séquences :
 \begin{frame}
 
 
-\frametitle{Les séquences immutables}
- Chaîne de caractères:
+\frametitle{Chaîne de caractères}
+  
 \begin{itemize}%[<+->]
-		\item <1->Elle est délimitée par des apostrophes simple\emph{'} ou triple \emph{'''}, des guillemets simples \emph{"} ou triple \emph{"""} 
-	  \item <8->Pour modifier une chaîne, il faut créer une nouvelle.
-		\item <12-> Les opérateurs '*' et '+' réalisent la multiplication et le concaténation des chaînes
+		\item <1->délimitée par des apostrophes simple\emph{'} ou triple \emph{'''}, des guillemets simples \emph{"} ou triple \emph{"""} 
+	  \item <8->Pour la modifier, il faut créer une nouvelle.
+		\item <12-> Les opérateurs '*' et '+' réalisent la multiplication et le concaténation
 		\end{itemize}
 \only<5->{	\includegraphics[width=6cm]{images/ch_helloworld.png}}
 		
@@ -340,6 +340,34 @@ Indexation des séquences :
 
 
 
+\begin{frame}
+  \frametitle{Les listes}
+  
+	\begin{itemize}[<+->]
+		\item Elles sont composées d'un ensemble d'éléments placés entre crochets [] et séparés par des virgules,
+		\item Elles sont modifiables
+		\item Elles peuvent contenir des éléments hétérogènes (de types différents : str, list, etc)
+		\end{itemize}
+    \pause
+		\centering
+			\includegraphics[width=5cm]{images/liste.png}
+ 
+\end{frame}
+
+
+
+\begin{frame}
+  \frametitle{Les listes}
+  
+	\begin{itemize}[<+->]
+		\item 
+		\item Elles sont modifiables
+		\item Elles peuvent contenir des éléments hétérogènes (de types différents)
+		\end{itemize}
+    \pause
+
+
+\end{frame}
 
 
 
