--- a/Les_transparent/styles/transp_java.cls
+++ b/Les_transparent/styles/transp_java.cls
@@ -31,7 +31,7 @@
 \RequirePackage{tipa}
 
 \ifpdf
-\graphicspath{{pdfs/}{imgs/}}
+\graphicspath{{pdfs/}{images/}}
 \DeclareGraphicsExtensions{.pdf,.png,.mps,.jpeg}
 \else
 \graphicspath{{epss/}}
