--- a/Les_transparent/corps/syntaxe.tex
+++ b/Les_transparent/corps/syntaxe.tex
@@ -10,8 +10,8 @@
 \begin{itemize}
 \item<1-4> Python: langage  typé dynamiquement 
 \item<2-4> [$\Rightarrow$] typage lors de l'affectation
-\item<4> Une variable peut changer de type au cours de l'exécution
-\item<3-4> Une variable n'est qu'une référence à l'objet (entier, réel, \dots)
+\item<3-4> Une variable peut changer de type au cours de l'exécution
+\item<4> Une variable n'est qu'une référence à l'objet (entier, réel, \dots)
 
 \end{itemize}
 }
@@ -282,7 +282,7 @@ Indexation des séquences :
 		  
 			\begin{itemize}
 				\item \verb![:j]! : désigne tout ce qui précède j ($j^e$ élément exclu)
-				\item \verb![i:]! : désigne tout ce qui suit i ($^e$ est inclu)
+				\item \verb![i:]! : désigne tout ce qui suit i ($i^e$ élément inclu)
 				\item \verb![:]!  : tous les éléments(utilisé pour réaliser une copie)
 				\item \verb![i:j:pas]! : pour réaliser une sélection avec \texttt{un pas} donné 
 			\end{itemize}
@@ -791,14 +791,14 @@ Indexation des séquences :
 \hline
 Opérateur &	Exemple &	Signification\\
 \hline
-\verb$>$ 	&\verb$a > 10$ 	&strictement supérieur\\
-  \verb$<$ 	&\verb$a < 10$ 	&strictement inférieur\\
-  \verb$>=$ 	&\verb$a >= 10$ 	&supérieur ou égal\\
-  \verb$<=$ 	&\verb$a <= 10$ 	&inférieur ou égal\\
-  \verb$==$ 	&\verb$a == 10$ 	&égal à\\
-  \verb$!=$ 	&\verb$a != 10$ 	&différent de\\
-  \verb$is$ 	&\verb$a is b$ 	  & a et b représentent le même objet\\
-  \verb$is not$ 	&\verb$a is not b$ 	& a et b ne représentent pas le même objet\\
+\verb!>! 	&\verb!a > 10! 	&strictement supérieur\\
+  \verb!<! 	&\verb!a < 10! 	&strictement inférieur\\
+  \verb!>=! 	&\verb!a >= 10! 	&supérieur ou égal\\
+  \verb!<=! 	&\verb!a <= 10! 	&inférieur ou égal\\
+  \verb!==! 	&\verb!a == 10! 	&égal à\\
+  \verb!!=! 	&\verb!a != 10! 	&différent de\\
+  \verb!is! 	&\verb!a is b! 	  & a et b représentent le même objet\\
+  \verb!is not! 	&\verb!a is not b! 	& a et b ne représentent pas le même objet\\
 \hline
 \end{tabular}
 }
@@ -855,17 +855,16 @@ Opérateur &	Exemple &	Signification\\
 \verb~not~ 	&\verb~not a~ 	& NON logique\\
 \verb~and~ 	&\verb~a and b~ &	ET logique~: évaluation paresseuse\\
 \verb~or~ 	&\verb~a or b~ &	OU logique~: évaluation paresseuse\\
-\verb~\&~ 	&\verb~a \& b~ 	&ET logique\\
-\verb~\^{}~ 	&\verb~a \^{} b~ 	&OU exclusif logique\\
-\verb~|~ 	&\verb~a | b~ 	&OU logique\\
+\verb~\&~ 	&\verb~a \& b~ 	& ET logique\\
+\verb~\^{}~ 	&\verb~a \^{} b~ 	& OU exclusif logique\\
+\verb~|~ 	&\verb~a | b~ 	& OU logique\\
 \hline
-\end{tabular}\\
-~\\
+\end{tabular}
 \pause
 Remarque : évaluation paresseuse
 \begin{itemize}
-	\item \texttt{a and b}  évalue et retourne \texttta si a est False, sinon  évalue et retourne b.
-	\item \texttt{a or b}  évalue et retourne a  si a est True, sinon  évalue et retourne b\\
+	\item \texttt{a and b}  évalue et retourne a si a est False, sinon évalue et retourne b.
+	\item \texttt{a or b}  évalue et retourne a  si a est True, sinon évalue et retourne b\\
 	\pause 
 	\footnotesize{
 	\colorbox{pink}{\parbox{9cm}{
@@ -879,45 +878,11 @@ Remarque : évaluation paresseuse
 
 \end{frame}
 
-
-
-
-
-\begin{frame}[fragile]
-\frametitle{Opérations arithmétiques}
-
-\only<1-3>{
-\begin{itemize}
-\item Opérations de base : \verb~+ - * /~
-\item Modulo  : \verb~\%~
-\item Puissance : \verb~**~
-\item Attention à la division entière : 
-  \begin{itemize}
-  \item 5//2 vaut 2
-  \end{itemize}
-\end{itemize}
-\pause
-Valeurs particulieres :
-\begin{itemize}
-\item NaN
-\item inf \pause
-\end{itemize}
-}
-\only<4>{
-\begin{tabular}{|l|l|l|l|l|}
-\hline
-  \textbf{X} & \textbf{Y} & \textbf{X/Y} & \textbf{X\%Y} & \textbf{X + Y}\\
-\hline
-  $x:$ valeur finie & $\pm\infty$ &0 &x & $\pm\infty$\\
-  $\pm\infty$ &valeur finie &$\pm\infty$ & NaN & $ \pm\infty$ \\
-  $+\infty$ &$+\infty$ &NaN &NaN & $+\infty$ \\
-  $+\infty$ &$-\infty$ &NaN &NaN  &NaN \\
-  Valeur finie ou infinie & NaN &NaN &NaN  &NaN \\
-	\hline
-\end{tabular}
-}
-\end{frame}
-
+%
+%
+%
+%
+%
 \begin{frame}
   \frametitle{Opérateurs sur les bits}
 
@@ -938,46 +903,90 @@ Valeurs particulieres :
 
 \begin{frame}
   \frametitle{Priorité des opérateurs}
+%\begin{tabular}{|l|l|}
+%\hline
+%les parenthèses &( )\\
+%\hline
+%les opérateurs d'incrémentation &++, - - \\
+%\hline
+%les opérateurs de multiplication, division, et modulo &*, /,\%\\
+%\hline
+%les opérateurs d'addition et soustraction &+,-\\
+%\hline
+%les opérateurs de décalage &$<<$,$>>$\\
+%\hline
+%les opérateurs de comparaison &$<$,$>$,$<=$,$>=$\\
+%\hline
+%les opérateurs d'égalité &==,!=\\
+%\hline
+%l'opérateur OU exclusif &\^{}\\
+%\hline
+%l'opérateur ET &\&\\
+%\hline
+%l'opérateur OU &$|$\\
+%\hline
+%l'opérateur ET logique &\&\&\\
+%\hline
+%l'opérateur OU logique &$||$\\
+%\hline
+%les opérateurs d'affectation &=,+=,-=  \\
+%\hline
+%\end{tabular}
+%\end{frame}
+%
+%
+%
+%\begin{frame}
+\footnotesize{
 \begin{tabular}{|l|l|}
-\hline
-les parenthèses &( )\\
-\hline
-les opérateurs d'incrémentation &++, - - \\
-\hline
-les opérateurs de multiplication, division, et modulo &*, /,\%\\
-\hline
-les opérateurs d'addition et soustraction &+,-\\
-\hline
-les opérateurs de décalage &$<<$,$>>$\\
-\hline
-les opérateurs de comparaison &$<$,$>$,$<=$,$>=$\\
-\hline
-les opérateurs d'égalité &==,!=\\
-\hline
-l'opérateur OU exclusif &\^{}\\
-\hline
-l'opérateur ET &\&\\
-\hline
-l'opérateur OU &$|$\\
-\hline
-l'opérateur ET logique &\&\&\\
-\hline
-l'opérateur OU logique &$||$\\
-\hline
-les opérateurs d'affectation &=,+=,-=  \\
-\hline
-\end{tabular}
+ \hline
+  \textbf{Nom de l'opérateur} & \textbf{Symbole} \\
+  \hline
+  Parenthèses, crochets et accolades &\verb!( )!, \verb![ ]!, \verb!\{ \}!\\
+  \hline
+  Accès à des éléments d'une séquence & \texttt{x[i]}, \texttt{x[i:j], x[i:j:k]}\\
+  \hline
+  Puissance & \verb!**!\\
+  \hline
+  Plus, moins et \textsc{non} unaire & \texttt{+x}, \texttt{-x}, \texttt{~x}\\
+  \hline
+  Multiplication, division, division entière, et modulo & \verb!*!,
+  \verb!//!,   \verb!/!,   \verb!\%!\\
+  \hline
+  Addition et soustraction &\verb!+!, \verb!-!\\
+  \hline
+  Décalage &\verb!<<!, \verb!>>!\\
+  \hline
+  \textsc{Et} binaire &\verb!\&!\\
+  \hline
+  \textsc{Ou exclusif} binaire &\^{}\\
+  \hline
+  \textsc{Ou} binaire &\verb!|!\\
+  \hline
+  Comparaison & \verb!<!, \verb!>!, \verb!<=!, \verb!>=!, \verb!==!,
+  \verb!!=!, \texttt{in}, \\
+	   & \texttt{not in}, \texttt{is}, \texttt{is not} \\
+  \hline
+  \textsc{Non} booléen & \texttt{not}\\
+  \hline
+  \textsc{Et} booléen & \texttt{and}\\
+  \hline
+  \textsc{Ou} booléen & \texttt{or}\\
+  \hline
+   Les opérateurs d'affectation & \verb!=!  \verb!+=!, \verb!-=!, \verb!*=!, \verb!/=!,  \verb!//=!, \verb!\%=!, \verb!**=!,\\
+     & \verb!>>=!, \verb!<<=!,\verb! \&=!, \verb!\^{ }=!, \verb!|=!.\\
+  \hline
+ \end{tabular}
+}
 \end{frame}
 
-
-
-\section{Instructions du langage Java}
+\section{Instructions du langage Python}
 
 \begin{frame}
   \frametitle{Règles de base}
 
 \begin{itemize}[<+->]
-\item Java est sensible à la casse 
+\item Chaque Python est sensible à la casse 
 \item les blocs de code sont encadrés par des accolades. Chaque instruction
    se termine par un caractère ';' 
  \item une instruction peut tenir sur plusieurs lignes 
